--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -1,7 +1,7 @@
 <?js
     var self = this;
     var isGlobalPage;
-
+    var fileType = arguments[0].fileType;
     docs.forEach(function(doc, i) {
 ?>
 
@@ -53,7 +53,7 @@
             <?js } ?>
 
             <?js doc.modules.forEach(function(module) { ?>
-                <?js= self.partial('method.tmpl', module) ?>
+                <?js= self.partial('method.tmpl') ?>
             <?js }) ?>
         <?js } else if (doc.kind === 'class') { ?>
             <?js= self.partial('method.tmpl', doc) ?>
@@ -67,7 +67,7 @@
             <?js } ?>
 
             <?js if (doc.examples && doc.examples.length) { ?>
-                <h3>Example<?js= doc.examples.length > 1? 's':'' ?></h3>
+                <h3>案例</h3>
                 <?js= self.partial('examples.tmpl', doc.examples) ?>
             <?js } ?>
         <?js } ?>
@@ -147,7 +147,7 @@
         }
         if (members && members.length && members.forEach) {
     ?>
-        <h3 class="subsection-title">Members</h3>
+        <h3 class="subsection-title">静态属性</h3>
 
         <?js members.forEach(function(p) { ?>
             <?js= self.partial('members.tmpl', p) ?>
@@ -158,7 +158,7 @@
         var methods = self.find({kind: 'function', memberof: isGlobalPage ? {isUndefined: true} : doc.longname});
         if (methods && methods.length && methods.forEach) {
     ?>
-        <h3 class="subsection-title">Methods</h3>
+        <h3 class="subsection-title"><?js= fileType === 'js' ? '导出方法' : '组件' ?></h3>
 
         <?js methods.forEach(function(m) { ?>
             <?js= self.partial('method.tmpl', m) ?>
