--- a/tmpl/details.tmpl
+++ b/tmpl/details.tmpl
@@ -17,7 +17,7 @@ if (data.defaultvalue && (data.defaultvaluetype === 'object' || data.defaultvalu
 <dl class="details">
     <?js if (data.description) {?>
     <dt class="tag-description">Description:</dt>
-    <dd class="tag-description"><ul class="dummy"><li><?js= data.description ?></li></ul></dd>
+    <dd class="tag-description"><ul class="dummy"><li><?js= data.description ? data.description.replace(/[\n\r]/g, '<br>') : data.description ?></li></ul></dd>
     <?js } ?>
 
     <?js if (data.meta && self.outputSourceFiles) {?>
