--- a/tmpl/members.tmpl
+++ b/tmpl/members.tmpl
@@ -33,6 +33,6 @@ var self = this;
 <?js } ?>
 
 <?js if (data.examples && examples.length) { ?>
-    <h5 class="h5-examples">Example<?js= examples.length > 1? 's':'' ?></h5>
+    <h5 class="h5-examples">案例</h5>
     <?js= this.partial('examples.tmpl', examples) ?>
 <?js } ?>
