--- a/tmpl/namespace.tmpl
+++ b/tmpl/namespace.tmpl
@@ -47,7 +47,7 @@ var self = this;
 <?js } ?>
 
 <?js if (data.examples && examples.length) { ?>
-    <h5 class="h5-examples">Example<?js= examples.length > 1? 's':'' ?></h5>
+    <h5 class="h5-examples">案例</h5>
     <?js= this.partial('examples.tmpl', examples) ?>
 <?js } ?>
 
@@ -71,7 +71,7 @@ var self = this;
 <?js } ?>
 
 <?js if (data.listens && listens.length) { ?>
-<h5 class="h5-listens">Listens to Events:</h5>
+<h5 class="h5-listens">事件</h5>
 <ul><?js listens.forEach(function(f) { ?>
     <li><?js= self.linkto(f) ?></li>
 <?js }); ?></ul>
