--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -52,6 +52,13 @@
     <?js } ?>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<style>
+nav>ul>li>a {
+  color: #646566;
+  border-left: 1px solid hsl(207, 10%, 86%);
+  padding-left: 12px !important;
+}
+</style>
 <body>
 
 <input type="checkbox" id="nav-trigger" class="nav-trigger" />
